app works on wall display